--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -104,7 +104,7 @@ a:hover {
   display: inline-block;
   font-family: var(--fontZenMaruGothic);
   font-size: var(--fontSize18);
-  font-weight: 700;
+  font-weight: bold;
   letter-spacing: .04em;
   line-height: 2.2;
   padding: 14px 72px 18px;
@@ -207,6 +207,7 @@ header
   font-weight: 600;
   line-height: 1.5;
   writing-mode: vertical-rl;
+  letter-spacing: 0.06rem;
 }
 /* -------------------------
 footer
@@ -385,6 +386,7 @@ footer
   font-size: var(--fontSize16);
   font-weight: 700;
   letter-spacing: .1em;
+  transition: all 0.3s;
 }
 .footerNav__list--item:hover {
   opacity: 0.8;
@@ -449,14 +451,164 @@ footer
   gap: 33px;
   grid-template-columns: repeat(3, 1fr);
 }
+.footer__snsIcon {
+  transition: all 0.3s;
+}
+.footer__snsIcon:hover {
+  opacity: 0.7;
+}
+/* -------------------------
+lower common
+----------------------------*/
+.lowermain {
+  margin-top: 160px;
+  font-family: var(--fontZenMaruGothic);
+}
+.lowermain_inner {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+/* アニメーションの部分 */
+.lower__charaInner {
+  height: auto;
+  width: 100%;
+  height: 530px;
+  margin: -80px auto -150px;
+  position: relative;
+}
+.lower__chara--img1,
+.lower__chara--surround1,
+.lower__chara--surround2 {
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.lower__chara--img1 {
+  max-width: 283px;
+  width: 100%;
+  z-index: -1;
+}
+.lower__chara--surround1 {
+  max-width: 432px;
+  width: 100%;
+  z-index: -2;
+}
+.lower__chara--surround2 {
+  max-width: 540px;
+  width: 100%;
+  z-index: -3;
+}
+/* アニメーションの部分 ↑*/
+.lower__textInner {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.lower__textInner .page__text {
+  line-height: 2.5;
+}
+.lower__textInner--title {
+  color: var(--textBlack);
+  font-family: var(--fontZenMaruGothic);
+  font-size: var(--fontSize30);
+  font-weight: 900;
+  letter-spacing: .07em;
+  line-height: 1.87;
+}
+.PinkBg {
+  display: inline;
+  color: #fff;
+  background-color: var(--palePink);
+  font-family: var(--fontZenMaruGothic);
+  font-size: var(--fontSize25);
+  font-weight: 900;
+  letter-spacing: .07em;
+  line-height: 3;
+}
+.lower__textInner--text {
+  font-size: var(--fontSize18);
+  letter-spacing: 0.06rem;
+  line-height: 2.6;
+}
+/* kirakira */
+.lower__pinkCircle,
+.lower__whiteCircle {
+  position: absolute;
+}
+.lower__pinkCircle.first,
+.lower__pinkCircle.fifth,
+.lower__whiteCircle.first,
+.lower__whiteCircle.second {
+  height: auto;
+  width: 1.5vw;
+}
+.lower__pinkCircle.second,
+.lower__pinkCircle.third,
+.lower__pinkCircle.forth,
+.lower__pinkCircle.sixth,
+.lower__whiteCircle.third {
+  height: auto;
+  width: 2.5vw;
+} 
+.lower__pinkCircle.first {
+  left: 18vw;
+  top: 185px;
+}
+.lower__pinkCircle.second {
+  bottom: 144px;
+  left: 19vw;
+}
+.lower__pinkCircle.third {
+  left: 27vw;
+  top: 152px;
+}
+.lower__pinkCircle.forth {
+  right: 29vw;
+  top: 139px;
+}
+.lower__pinkCircle.fifth {
+  right: 23vw;
+  top: 234px;
+}
+.lower__pinkCircle.sixth {
+  bottom: 128px;
+  right: 19vw;
+}
+.lower__whiteCircle.first {
+  left: 24vw;
+  top: 274px;
+}
+.lower__whiteCircle.second {
+  bottom: 206px;
+  right: 27vw;
+}
+.lower__whiteCircle.third {
+  right: 18vw;
+  top: 169px;
+}
 @media screen and (min-width:1513px) {
+  .mainvisual__wrap {
+    background-color: #FFB4C8;
+    height: fit-content;
+    position: relative;
+  }
   .mainvisual__top {
-    height: 720px!important;
+    /* height: 720px!important; */
+    /* width: 1512px !important; */
+    margin: auto;
+    /* background-image: url("../images/top/img-top_mainvisualTopBg.svg") !important; */
   }
 }
 @media screen and (min-width:1700px) {
   .mainvisual__top {
-    height: 810px!important;
+    /* width: 1512px!important; */
+    /* height: 810px!important; */
+    margin: auto;
   }
 }
 @media screen and (max-width:1200px) {
