--- a/src/assets/css/page.top.css
+++ b/src/assets/css/page.top.css
@@ -985,6 +985,7 @@ news
 ----------------------------*/
   .news {
     padding: 30px 0 36px;
+    margin-top: 140px;
   }
   .news .page__title {
     padding-top: 0;
