--- a/src/assets/css/page.service.css
+++ b/src/assets/css/page.service.css
@@ -73,6 +73,7 @@ about
 ----------------------------*/
 .service__about {
     padding-top: 120px;
+    padding-bottom: 145px;
 }
 .service__about--title {
     display: flex;
@@ -94,4 +95,145 @@ about
     letter-spacing: 0.17rem;
     color: #fff;
     text-shadow: rgb(35, 24, 21) 2px 0px 0px, rgb(35, 24, 21) 1.75517px 0.958851px 0px, rgb(35, 24, 21) 1.0806px 1.68294px 0px, rgb(35, 24, 21) 0.141474px 1.99499px 0px, rgb(35, 24, 21) -0.832294px 1.81859px 0px, rgb(35, 24, 21) -1.60229px 1.19694px 0px, rgb(35, 24, 21) -1.97998px 0.28224px 0px, rgb(35, 24, 21) -1.87291px -0.701566px 0px, rgb(35, 24, 21) -1.30729px -1.5136px 0px, rgb(35, 24, 21) -0.421592px -1.95506px 0px, rgb(35, 24, 21) 0.567324px -1.91785px 0px, rgb(35, 24, 21) 1.41734px -1.41108px 0px, rgb(35, 24, 21) 1.92034px -0.558831px 0px;
+}
+.about__column {
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr 1fr;
+    gap: 20px;
+    max-width: 1200px;
+    width: 100%;
+    margin: auto;
+    padding-top: 90px;
+}
+.about__column--item {
+    background-color: #fff;
+}
+.about__column--text {
+    font-size: var(--fontSize25);
+    letter-spacing: 0.01rem;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 30px;
+}
+.about__column--text .small {
+    font-size: var(--fontSize16);
+    letter-spacing: 0.03rem;
+}
+.service__about--description {
+    margin: auto;
+    padding-top: 55px;
+}
+.service__about--description p {
+    font-size: var(--fontSize18);
+    letter-spacing: 0.04rem;
+    font-weight: bold;
+    text-align: center;
+}
+.service__about .more__btn--container {
+    margin-top: 75px;
+}
+/* -------------------------
+flow
+----------------------------*/
+.service__flow {
+    padding-top: 140px;
+    background-color: var(--main-color);
+    border-top: 3px solid var(--textBlack);
+    border-bottom: 3px solid var(--textBlack);
+}
+.flow__item--title {
+    background-color: #fff;
+    border: 3px solid var(--textBlack);
+    border-radius: 50px;
+    color: var(--textBlack);
+    display: flex;
+    font-family: var(--fontZenMaruGothic);
+    font-size: var(--fontSize25);
+    font-weight: 700;
+    justify-content: center;
+    left: 50%;
+    margin-bottom: -30px;
+    padding: 15px 0;
+    width: 392px;
+    position: relative;
+    transform: translateX(-50%);
+    z-index: 10;
+    letter-spacing: 0.06rem;
+}
+.flow__item--title:before,
+.flow__item--title:after {
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 10px solid var(--textBlack);
+    bottom: -10px;
+    content: "";
+    left: 50%;
+    position: absolute;
+    transform: translateX(-50%);
+}
+.flow__item--title:after {
+    border-top: 10px solid #fff;
+    bottom: -7px;
+}
+.flow__item--slide img {
+    width: 374px;
+}
+.service__flow .js-slide {
+    display: grid;
+    gap: 30px;
+    grid-template-columns: repeat(5, 1fr);
+    margin: 80px auto;
+    max-width: 1200px;
+}
+.service__flow .js-slide {
+    display: block;
+    margin: 40px auto;
+    /* max-width: 1200px; */
+}
+.flow__item--slide img {
+    transform: scale(.8);
+    transition: transform .3s;
+}
+
+.flow__item--slide.slick-center img {
+    transform: scale(1);
+}
+.flow__item--slide img {
+    border: 3px solid var(--textBlack);
+    height: auto;
+    width: 380px;
+}
+/* -------------------------
+introduction
+----------------------------*/
+.service__introduction {
+    padding-top: 140px;
+}
+.size__tags {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+    margin: auto;
+    padding-top: 65px;
+    padding-bottom: 33px;
+}
+.size__tags .tag {
+    width: 170px;
+    padding: 12px 0 14px 0;
+    background-color: #fff;
+    border-radius: 50px;
+    text-align: center;
+}
+.size__tags .tag.active {
+    border: 3px solid var(--textBlack);
+    background-color: var(--main-color);
+}
+.introduction__size {
+    max-width: 750px;
+    width: 49.6vw;
+    margin: auto;
+}
+.introduction__size img {
+    border: 3px solid var(--textBlack);
 }
