--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -111,7 +111,8 @@ a:hover {
   font-weight: bold;
   letter-spacing: .04em;
   line-height: 2.2;
-  padding: 14px 72px 18px;
+  /* padding: 14px 72px 18px; */
+  padding: 6px 72px 9px;
   text-decoration: none;
 }
 .more__btn:hover {
@@ -496,6 +497,40 @@ nav menu
   background: inherit;
   border-radius: inherit;
   transform: rotate(90deg);
+}
+/* -------------------------
+message
+----------------------------*/
+.message {
+  padding: 80px 0 100px 0;
+  background-color: var(--paleYellow);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  border-top: 3px solid var(--textBlack);
+}
+.message__bg--title {
+  max-width: 814px;
+  width: 53.83vw;
+}
+.message__chara--img {
+  margin-top: -50px;
+  max-width: 183px;
+  width: 12.1vw;
+}
+.message__inner {
+  margin-top: 44px;
+}
+.message__inner .message__text {
+  font-size: var(--fontSize18);
+  font-weight: bold;
+  letter-spacing: 0.06rem;
+  line-height: 2.6;
+  text-align: center;
+}
+.message .more__btn--container {
+  margin-top: 65px;
 }
 /* -------------------------
 footer
